--- a/WebApplication7/appsettings.json
+++ b/WebApplication7/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "WebApplication7Context": "server=localhost;userid=root;password=admin;database=saleswebmvcappdb"
     }
-  },
-  "AllowedHosts": "*"
 }
